# fabman-discord

./: .gitignore  .pre-commit-config.yaml  Procfile  README.md  pyproject.toml
fabman_discord/: dependencies.py  main.py  settings.py  utils.py
fabman_discord/auth/: router.py
fabman_discord/bot/: api.py  main.py
fabman_discord/fabman/: router.py  test_router.py  test_webhook.py  webhook.py
